--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy Terraform
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -30,17 +33,51 @@ jobs:
       - name: Verify AWS CLI
         run: aws sts get-caller-identity
 
+      # Run TFLint using official action
+      - name: Setup TFLint
+        uses: terraform-linters/setup-tflint@v1
+
+      - name: Run TFLint
+        run: tflint
+
+      # Run tfsec using official action
+      - name: Run tfsec Scan
+        uses: aquasecurity/tfsec-action@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
       # Initialize terraform
       - name: Initialize Terraform
         run: terraform init
 
-      # Execute the terraform plan
+      - name: Terraform Format Check
+        run: terraform fmt -check
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      # This step runs terraform plan on pull requests
       - name: Terraform Plan
+        if: github.event_name == 'pull_request'
         run: terraform plan
 
-      # Deploy terraform changes
+      # These steps run on push to main branch (merge)
       - name: Terraform Apply
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve
+      
+      # Uncomment this to destroy terraform resources on push to main branch (use with caution!)
+      # - name: Terraform Destroy
+      #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      #   run: terraform destroy -auto-approve
+      
+      # Execute the terraform plan
+      #- name: Terraform Plan
+      #  run: terraform plan
+
+      # Deploy terraform changes
+      #- name: Terraform Apply
+      #  run: terraform apply -auto-approve
 
       # Destroy terraform resources (uncomment lines below)
       # - name: Terraform Destroy
