--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -8,9 +8,9 @@ on:
       - main
 
 jobs:
-  terraform:
-    name: Deploy Terraform Job
-    if: github.event_name != 'pull_request_review' || github.event.review.state == 'approved'
+  terraform_plan:
+    name: Plan Terraform Job
+    if: github.event.review.state == 'approved' && github.event_name == 'pull_request_review'
     runs-on: ubuntu-latest
 
     steps:
@@ -30,6 +30,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: "us-east-1"
       
+      # Check aws connection and user identity
       - name: Verify AWS CLI
         run: aws sts get-caller-identity
 
@@ -56,15 +57,50 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-      # This step runs terraform plan on pull requests
       - name: Terraform Plan
-        if: github.event_name == 'pull_request'
         run: terraform plan
 
-      # These steps run on push to main branch (merge)
+  terraform_apply:
+    name: Apply Terraform Job
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      # Pulls the latest version of your code from the GitHub repository
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Installs Terraform on the GitHub runner
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      # Configures your AWS access by using the credentials stored in GitHub Secrets
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: "us-east-1"
+
+      # Check aws connection and user identity
+      - name: Verify AWS CLI
+        run: aws sts get-caller-identity
+
+      # Initialize terraform
+      - name: Initialize Terraform
+        run: terraform init
+
       - name: Terraform Apply
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve
+        run: terraform plan -auto-approve
+
+      # This step runs terraform plan on pull requests
+      #- name: Terraform Plan
+      #  if: github.event_name == 'pull_request'
+      #  run: terraform plan
+
+      # These steps run on push to main branch (merge)
+      #- name: Terraform Apply
+      #  if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      #  run: terraform apply -auto-approve
       
       # Uncomment this to destroy terraform resources on push to main branch (use with caution!)
       # - name: Terraform Destroy
