--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -50,27 +50,27 @@ jobs:
         uses: terraform-linters/setup-tflint@v1
 
       - name: Run TFLint
-        run: tflint ${{ env.target_folder }}
+        run: tflint ${{ vars.target_folder }}
 
       # Run tfsec using official action
       - name: Run tfsec Scan
         uses: aquasecurity/tfsec-action@v1.0.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          working_directory: ${{ env.target_folder }}
+          working_directory: ${{ vars.target_folder }}
 
       # Initialize terraform
       - name: Initialize Terraform
-        run: terraform -chdir=${{ env.target_folder }} init
+        run: terraform -chdir=${{ vars.target_folder }} init
 
       - name: Terraform Format Check
-        run: terraform -chdir=${{ env.target_folder }} fmt -check
+        run: terraform -chdir=${{ vars.target_folder }} fmt -check
 
       - name: Terraform Validate
-        run: terraform -chdir=${{ env.target_folder }} validate
+        run: terraform -chdir=${{ vars.target_folder }} validate
 
       - name: Terraform Plan
-        run: terraform -chdir=${{ env.target_folder }} plan
+        run: terraform -chdir=${{ vars.target_folder }} plan
 
   terraform_apply:
     name: Apply Terraform Job
@@ -99,7 +99,7 @@ jobs:
 
       # Initialize terraform
       - name: Initialize Terraform
-        run: terraform -chdir=${{ env.target_folder }} init
+        run: terraform -chdir=${{ vars.target_folder }} init
 
       - name: Terraform Apply
-        run: terraform -chdir=${{ env.target_folder }} apply -auto-approve
+        run: terraform -chdir=${{ vars.target_folder }} apply -auto-approve
